# EvoPaw

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  README.zh-CN.md  config.yaml.template  coverage.json  docker-compose.yaml  pgvector-docker-compose.yaml  pyproject.toml  requirements.txt  sandbox-docker-compose.yaml  schema.sql
docs/: android-app-development-2026-04-25.md  code-review-multi-provider-strict-2026-04-28.md  code-review-report-2026-04-25.md  design-api.md  design-data.md  feishu-paper-summary-flow-review-2026-04-22.md  hermes-vs-nanobot-multi-provider-analysis-2026-04-22.md  message-flow.md  redundancy-audit-2026-04-21.md  skills-placeholders.md  subagent-skills-hook-pipeline-2026-04-29.md  test-design-course22.md
docs/archive/: DESIGN.md  code-review-findings-2026-04-18.md  code-review-multi-provider-2026-04-28.md  code-review-report-2026-04-20.md  design-modules.md  design-observability.md  multi-provider-final-plan-2026-04-27.md  multi-provider-rollout-summary-2026-04-27.md  redundancy-audit-2026-04-21.md  skills-provider-matrix.md  test-design-course22.md
docs/improved_agent/: evopaw-multi-model-design-2026-04-23.md  harness-improvement-plan.md  hermes-agent-improvement-plan.md  hermes-nanobot-borrow-action-plan-2026-04-29.md  hermes-nanobot-subagent-skills-hook-analysis-2026-04-29.md  pi-mono-analysis-for-evopaw-2026-04-27.md  toolized-capabilities-feasibility-2026-04-24.md  yoyo-evolve-analysis-for-evopaw-2026-04-23.md
docs/research/: asr-local-deployment-on-current-workstation.md  automated-research-agent-open-source-comparison-2026-04-26.md  fun-asr-vs-qwen3-asr-local-deployment.md
docs/runbooks/: voice-pre-production.md
evopaw/: main.py  models.py  runner.py
evopaw/agent_backends/: __init__.py  _http_chat_base.py  anthropic_messages.py  base.py  claude_sdk.py  openai_chat.py
evopaw/agents/: __init__.py  hooks.py  main_agent.py  response_finalizer.py  skill_agent.py  sub_agent_registry.py
evopaw/api/: capture_sender.py  (+1 more)
scripts/: audit_audio_sample_rate.py  calibrate_thresholds.py
workspace-init/: agent.md  memory.md  soul.md  user.md
xiaopaw/: main.py
(+118 files in other folders)
